<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">人狼BGM＆タイマー</string>
    <string name="action_settings">設定</string>
    <string name="action_exit">終了</string>


    <string name="lightning_se_button">かみなり</string>

    <string name="openning_bgm_button">プロローグ</string>
    <string name="confirm_bgm_button">役職確認</string>
    <string name="discussion_bgm_button">議論タイム</string>
    <string name="vote_bgm_button">運命の投票</string>
    <string name="execution_bgm_button">処刑執行</string>
    <string name="night_bgm_button">夜の儀式</string>
    <string name="morning_bgm_button">	朝の儀式</string>
    <string name="no_bgm_button">BGM停止</string>

    <string name="victory_warewolf_bgm_button">人狼勝利</string>
    <string name="victory_villager_bgm_button">	村人勝利</string>
    <string name="victory_thirdparty_bgm_button">第三勝利</string>

    <string name="timer_format">%s</string>
    <string name="start_button_label">スタート</string>
    <string name="stop_button_label">ストップ</string>
    <string name="reset_button_label">5分にリセット</string>
    <string name="minute_plus_button_label">+1分</string>
    <string name="second_plus_button_label">+10秒</string>
    <string name="minute_minus_button_label">-1分</string>
    <string name="second_minus_button_label">-10秒</string>

    <string name="setting_experimental">実験的</string>
    <string name="setting_smart_light">スマート電球連携</string>
    <string name="setting_smart_light_summary">シーンに応じてスマート電球と連携する</string>
    <string name="setting_smart_light_title">電球の種類</string>
    <string name="setting_smart_light_none">使用しない</string>
    <string name="setting_smart_light_nexturn">NEXTURN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
